# MoodFlow

./: .dockerignore  .gitignore  Dockerfile.android  LICENSE  README.md  docker-compose.yml  package-lock.json
ai-service/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  dummy_server.py  preload_models.py  pyproject.toml  requirements.txt  start.sh
ai-service/app/: main.py
ai-service/app/pipelines/: analyze.py  checkin.py  emotion.py  topic.py  transcription.py
ai-service/app/routes/: analyze.py  checkin.py  queue.py
ai-service/app/utils/: audio.py
ai-service/worker/: __init__.py  client.py  config.py  main.py
ai-service/worker/jobs/: __init__.py  data.py  processors.py
slides/: package-lock.json  package.json  slides.md
slides/components/: MoodsMetricsDashboard.vue  SentimentDashboard.vue
web/: .env.example  .env.local  lucide-react.d.ts  package-lock.json  package.json  pnpm-lock.yaml  prisma.config.ts  tailwind.config.js  tsconfig.tsbuildinfo
web/.next/: app-build-manifest.json  trace
web/.next/cache/: .previewinfo  .rscinfo  .tsbuildinfo  config.json
web/.next/server/: app-paths-manifest.json  server-reference-manifest.js  server-reference-manifest.json  (+1 more)
web/app/: globals.css  layout.tsx  page.tsx
web/components/: DashboardSidebar.tsx  FloatingShapes.tsx  GridFloor.tsx  Hero.tsx  Navbar.tsx  Particles.tsx  ThreeScene.tsx  VoiceCheckModal.tsx
web/lib/: ai-service.ts  analytics.ts  auth.ts  dashboard.ts  db.ts  env.ts  http.ts  minio.ts  password.ts  recordings.ts
web/prisma/: schema.prisma
(+162 files in other folders)
