[project]
name = "moodflow-ai-service"
version = "1.0.0"
description = "AI Processing Service for MoodFlow"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "torch>=2.1.0",
    "torchaudio>=2.3.0",
    "transformers>=4.36.0",
    "httpx>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pytest>=8.0.0",
]